<resources>
    <string name="app_name">Wecompli</string>
    <string name="rember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="resetpassword">RESET PASSWORD</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="didypurememberyourpassword">Did you remember your password? LOGIN  </string>
    <string name="startcheck">START CHECKS</string>
    <string name="no_record_found">No Record Found</string>
    <string name="select_language">Language</string>
    <string name="english">English</string>
    <string name="english_code">en</string>
    <string name="german">German</string>
    <string name="german_code">de</string>
    <string name="dutch">Dutch</string>
    <string name="dutch_code">nl</string>
    <string name="spnish">Spanish</string>
    <string name="spanish_code">es</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="servicing">SERVICING</string>
    <string name="start_chk">START CHECKS</string>
    <string name="incident_report">INCIDENT REPORT</string>
    <string name="other">OTHERS</string>
    <string name="logout">LOGOUT</string>
    <string name="audit">AUDIT</string>
    <string name="repair_menu">REPAIR</string>
    <string name="audit_inspection">AUDIT INSPECTION</string>
    <string name="doc_manag">DOCUMENTS</string>
    <string name="contact">CONTACTS</string>
    <string name="super_admin">SUPER ADMIN</string>
    <string name="company_admin">COMPANY ADMIN</string>
    <string name="nornal_user">NORMAL USER</string>
    <string name="new_version_avalible">A New Update is Available</string>
    <string name="update">Update</string>
    <string name="sureto_logout">Are you sure to Logout?</string>
    <string name="underdevelopment">Under Development.</string>
    <string name="permessionnecessay">Permission necessary</string>
    <string name="externalstoragepermession">External storage permission is necessary</string>
    <string name="daily">DAILY</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="quaterly">QUATERLY</string>
    <string name="halfyearly">HALF-YEARLY</string>
    <string name="yearly">YEARLY</string>
    <string name="weekly_audit">WEEKLY AUDIT</string>
    <string name="monthly_audit">MONTHLY AUDIT</string>
    <string name="acidentreport">ACCIDENT REPORT</string>
    <string name="equipmentincedent">EQUIPMENT INCIDENT</string>
    <string name="buildingincedent">BUILDING INCIDENT</string>
    <string name="customerreport">CUSTOMER/STUFF INCIDENT</string>
    <string name="equipmentincedentform">EQUIPMENT INCIDENT FORM</string>
    <string name="buildingincedentform">BUILDING INCIDENT FORM</string>
    <string name="customerreportform">CUSTOMER/STUFF INCIDENT FORM</string>
    <string name="accident_report_form">ACCIDENT REPORT FORM</string>
    <string name="testing_account">Testing account</string>
    <string name="servarity_level">SERVARITY LAVEL</string>
    <string name="enter_injured_person_name">Please Enter injured person name.</string>
    <string name="enter_injured_person_phone">Please Enter injured person telephone number.</string>
    <string name="check_accident_report">Please Check accident report Check</string>
    <string name="forehead">Forehead</string>
    <string name="jaw">Jaw/TWJ</string>
    <string name="tooth">Tooth</string>
    <string name="chest">Chest</string>
    <string name="rightelow">Right Elbow</string>
    <string name="leftbelow">Left Elbow</string>
    <string name="adbomen">Adbomen</string>
    <string name="rightwrist">Right Wrist</string>
    <string name="leftwrist">Left Wrist</string>
    <string name="hip">Hip</string>
    <string name="fingure">Fingure</string>
    <string name="right_thing">Right Thing</string>
    <string name="left_thing">Left Things</string>
    <string name="right_knee">Right Knee</string>
    <string name="left_knee">Left Knee</string>
    <string name="right_shin">Right Shin</string>
    <string name="left_shin">Left Shin</string>
    <string name="right_foot">Right Foot</string>
    <string name="left_foot">Left Foot</string>
    <string name="conti">CONTINUE</string>
    <string name="left_ear">Left Ear</string>
    <string name="Right_ear">Right Ear</string>
    <string name="nose">Nose</string>
    <string name="chin">Chin</string>
    <string name="left_shoulder">Left Shoulder</string>
    <string name="Right_shoulder">Right Shoulder</string>
    <string name="upper_back">Upper Back</string>
    <string name="lower_back">Lower Back</string>
    <string name="left_leg">Left Leg</string>
    <string name="right_leg">Right Leg</string>
    <string name="left_calf">Left Calf</string>
    <string name="right_calf">Right Calf</string>
    <string name="left_ankle">Left Ankle</string>
    <string name="right_ankle">Right Ankle</string>
    <string name="left_toe">Left Toe</string>
    <string name="right_toe">Right Toe</string>
    <string name="wrongmessage">Something Went Wrong. Please Try later.</string>
    <string name="live_fault">LIVE FAULT LIST</string>
    <string name="fault_action_list">FAULT ACTION LIST</string>
    <string name="ad_hoc_fault">+ AD HOC FAULT</string>
    <string name="fault_action">FAULT ACTION LIST</string>
    <string name="total_faults">TOTAL FAULTS </string>
    <string name="press_scan">* press to scan or select fault check</string>
    <string name="time_spent">Time Spend</string>
    <string name="labour_charge"> Labour Charge: £ </string>
    <string name="Part_cost"> Part Cost: £ </string>
    <string name="total_cost"> Total Cost: £ </string>
    <string name="name_of_enginner">Name of Engineer</string>
    <string name="company_name">Company name</string>
    <string name="manager_name">Manager name</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="engineer_signature">Engineer Signature Here</string>
    <string name="manager_signature">Manager Signature Here</string>
    <string name="qrcodescan">QRCode Scan</string>
    <string name="selectfaultchk">Select Fault Check</string>
    <string name="add_hoc_fault">ADD AD HOC FAULT</string>
    <string name="serverty_levels">SEVERITY \n LEVEL</string>
    <string name="level_row"> LOW </string>
    <string name="select_image">Click here for \n add image</string>
    <string name="vistor_conductor">VISITOR AND CONDUCTOR FORM</string>
    <string name="responsible">RESPONSIBLE PERSON FORM</string>
    <string name="emergencycontact">EMERGENCY CONTACT FORM</string>
    <string name="notethis">Note  this form la not a substitute for the statutory accidentits  record Bi 510 and should be complete in addition •
completed in addition.
</string>
    <string name="iconstent">I consent to sharing the information in this accident report with third parties, including insurance company .
    </string>
    <string name="tocomply">To comply with the Data Protection Act 1998 CDPA) personal details must be kept confidential, When completed these forms must be stored securely.</string>
    <string name="satement1">STATEMENT BY WITNESS 1</string>
    <string name="satement2">STATEMENT BY WITNESS 2</string>
    <string name="anyapperts">Any aparatus or 2quipment involved must be retained for inspection. See overleaf for signed statement</string>
    <string name="wentduty">IF s(he) went of duty at what time and for how long?</string>
    <string name="iweconfirm">I/we confirm. that as far as I am/we are aware the above details including the description of the accident are true and complete.
    </string>
    <string name="continuetowork">if on duty did s(he) after the occurrence continue to work or go off duty?</string>
    <string name="off_duty_injured_time">Was s(he) on or off duty at the time?</string>
    <string name="emp_details">If injured person was an employee this section is to be completed by the employees Manager or Senior employee
    </string>
    <string name="full_desc_injuredperson">Full description of any inpries suffered and treatment given</string>
    <string name="full_desc_accident">Full description of the accident circumstances,\n including a descripton of an  apparatus of equipment involved
    </string>
    <string name="servertylevel">SERVITY LEVEL </string>
    <string name="backbody">BACK VIEW</string>
    <string name="frontbody">FRONT VIEW</string>
    <string name="clickher">Click here for body map</string>
    <string name="submit">SUBMIT</string>
    <string name="notifywho">NOTIFY WHO</string>
    <string name="Selectcompany">Select Company</string>
    <string name="selectsite">Select Site</string>
    <string name="major">    MAJOR</string>
    <string name="minor">     MINOR</string>
    <string name="detailsoforganization">DETAILS OF ORGANIZATION</string>
    <string name="nameoforganization"> Name of Organization</string>
    <string name="addressoforganization">Address of Organization</string>
    <string name="postcode"> Post Code</string>
    <string name="telephone">Telephone</string>
    <string name="detailsofpersoninjured">DETAILS OF PERSON INJURED</string>
    <string name="fullnamepersoninjured">Full name of person injured</string>
    <string name="personhomeaddress">Person home address</string>
    <string name="dateofbirth"> Date of Birth</string>
    <string name="detailsofemployeecompleteform">DETAILS OF EMPLOYEE COMPLETING THE FORM</string>
    <string name="tickappropritebox">Tick approprite box</string>
    <string name="detailsofother"> Details Of Others</string>
    <string name="descriprionofaccident"> DESCRIPTION OF ACCIDENT</string>
    <string name="selectaccidentlocation">Select accident location</string>
    <string name="dateofoccurence">Date of occurence</string>
    <string name="timeofoccurence">Time of occurence</string>
    <string name="takephatoorvideo">TAKE PHATO </string>
    <string name="employmentdetails">EMPLOYMENT DETAILS</string>
    <string name="signofbehalf">Signed (on behalf of Owner/Company)</string>
    <string name="patientname">Patient Name</string>
    <string name="postion">Position</string>
    <string name="statementdetails">statement details</string>
    <string name="signbywitness">Signed by witness</string>
    <string name="addressofwitness">Address of Witeness</string>
    <string name="pairntnamecompletedby">Print name(Form completed by)</string>
    <string name="signinjuredperson">Sign(Injured person)</string>
    <string name="prientinjuredperson">Print name( injured person)</string>
    <string name="employee">  Employee</string>
    <string name="customer">Customer</string>
    <string name="visitor">  Visitor</string>
    <string name="others">Others  (Please give details below)</string>
    <string name="serverty_level">SERVITY LEVEL </string>
    <string name="decsriptionofincident">DESCRIPTION OF INCIDENT</string>
    <string name="equpmentname">Equipment name</string>
    <string name="full_description_ofincident">Full description of the incident</string>
    <string name="address">Address</string>
    <string name="antinjary">Any Injuries:</string>
    <string name="yes"> YES</string>
    <string name="no">NO</string>
    <string name="generalbuilding">General building</string>
    <string name="task"> Task</string>
    <string name="forgotemail">Email</string>
    <string name="signinhere">Sign In here</string>
    <string name="completed_by">Completed by</string>
    <string name="prients_name"> name</string>
    <string name="input_tempa">Input temparature</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
    <string name="select_image_mode">Choose Image from </string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="capture_from_camera">Capture photo from camera</string>
</resources>