<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_250sdp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/rectangular_shape_white_round_corner_lightgrey_broder">
    <ImageView
        android:id="@+id/img_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true">

    </ImageView>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_below="@+id/img_app"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/select_image_mode"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="@dimen/_10sdp"></TextView>
        <Button
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/select_from_gallery"
            android:textColor="@color/white"
        android:background="@drawable/rectangular_shape_blue_rounded_corner"
        android:layout_below="@+id/tv_message"></Button>
        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/capture_from_camera"
            android:textColor="@color/white"
            android:background="@drawable/rectangular_shape_blue_rounded_corner"
            android:layout_below="@+id/btn_gallery"></Button>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@drawable/rectangular_shape_blue_rounded_corner"
            android:layout_below="@+id/btn_camera"></Button>
    </RelativeLayout>
</RelativeLayout>