<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>
    <import type="android.view.View"></import>
    <variable
        name="forgotviewmodel"
        type="com.wecompli.screeen.forgotpassword.ForgotPasswordViewModel" />
</data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bg">

        <ImageView
            android:id="@+id/img_toplogin"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_73sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/wecompillogintop" />

        <RelativeLayout
            android:id="@+id/rl_loginbg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_toplogin"

            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/rectangular_shape_white">

            <RelativeLayout
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:background="@drawable/rectangular_shape_blue">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_top"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_5sdp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgotemail"
                    android:inputType="textEmailAddress"

                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_forgotpass"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_44sdp"
                android:layout_below="@+id/usernameWrapper"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rectangular_shape_blue"

                android:text="@string/resetpassword"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_loginforgotpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_forgotpass"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/didypurememberyourpassword"
                android:textSize="@dimen/_11sdp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@+id/img_toplogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/login" />

    </RelativeLayout>
</layout>