<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_white_top_two_rounded_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_selectCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Selectcompany"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_17sdp"></TextView>
        <TextView
            android:id="@+id/tv_Selected_company"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginTop="@dimen/_3sdp"

            android:paddingRight="@dimen/_8sdp"
            android:hint="@string/Selectcompany"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/rectangular_shape_rounded_corner_login"/>
        <TextView
            android:id="@+id/tvselectSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectsite"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"

            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"></TextView>

        <TextView
            android:id="@+id/tv_select_site"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_below="@+id/tv_Selected_company"
            android:drawableRight="@drawable/down_arrow"
            android:paddingRight="@dimen/_8sdp"
            android:hint="@string/selectsite"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/_8sdp"
            android:textSize="@dimen/_11sdp"
            android:textColorHint="@color/black"
            android:background="@drawable/rectangular_shape_rounded_corner_login"/>

        <TextView
            android:id="@+id/tvSelectdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"></TextView>
        <TextView
            android:id="@+id/tv_check_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_below="@+id/tv_select_site"
            android:paddingRight="@dimen/_8sdp"
            android:hint="@string/select_date"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:textSize="@dimen/_11sdp"
            android:visibility="visible"
            android:drawableRight="@drawable/calender"
            android:textColor="@color/black"
            android:background="@drawable/rectangular_shape_rounded_corner_login"/>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/chk_remember"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/gradient_login_button"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:drawablePadding="@dimen/_7sdp"
           android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>